riscv/tests/ui/fail_no_unsafe.stderr
error: expected `unsafe`
 --> tests/ui/fail_no_unsafe.rs:1:19
  |
1 | #[riscv::pac_enum(InterruptNumber)]
  |                   ^^^^^^^^^^^^^^^
